plugins {
    id 'java'
    id 'maven-publish'
    id 'signing'
}

group 'me.alexjs'

repositories {
    mavenCentral()
}

dependencies {

    implementation 'com.google.guava:guava:31.1-jre'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

}

test {
    useJUnitPlatform()
}

java {
    withSourcesJar()
    withJavadocJar()
}

compileJava {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}

publishing {
    repositories {
        maven {
            name = "OSSRH"
            url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
            // These credentials are saved in ~/.gradle/gradle.properties
            credentials {
                username = project.findProperty("mavenUsername")
                password = project.findProperty("mavenPassword")
            }
        }
    }

    publications {

        def repoHttps = "https:/github.com/ajs1998/Dag"
        def repoSsh = "git@github.com:ajs1998/Dag.git"

        mavenJava(MavenPublication) {
            from components.java
            pom {

                name = 'Dag'
                description = 'Java implementation of a DAG (Directed Acyclic Graph)'
                url = '$repoHttps'

                licenses {
                    license {
                        name = 'The MIT License'
                        url = 'https://opensource.org/licenses/MIT'
                    }
                }

                developers {
                    developer {
                        id = 'ajs1998'
                        name = 'Alex Sweeney'
                        email = 'ajs1998@gmail.com'
                    }
                }

                scm {
                    connection = 'scm:git:$repoHttps.git'
                    developerConnection = 'scm:git:$repoSsh'
                    url = '$repoHttps'
                }

            }
        }

    }
}

signing {
    useGpgCmd()
    sign publishing.publications.mavenJava
}
